<resources>
    <!-- App -->
    <string name="app_hello_blank_fragment">Hello blank fragment</string>
    <string name="app_empty_string" />
    <string name="app_name">Gram</string>
    <string name="app_toast_data_update">Data is update</string>
    <!-- Settings -->
    <string name="settings_default_bio">Bio</string>
    <string name="settings_default_number">+7911111111111</string>
    <string name="settings_default_label_bio">Write about yourself</string>
    <string name="settings_default_login">\@Molinov</string>
    <string name="settings_default_user_name">Vadim Molinov</string>
    <string name="settings_status_online">Online</string>
    <string name="settings_text_account">Account</string>
    <string name="settings_label_phone_number">Click to change phone number</string>
    <string name="settings_label_login">User name</string>
    <string name="settings_menu_change_name">Change name</string>
    <string name="settings_menu_exit">Exit</string>
    <string name="settings_edit_text_name">Name</string>
    <string name="settings_edit_text_last_name">Last name</string>
    <string name="settings_edit_username">Username</string>
    <string name="settings_digits_full_name">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="settings_digits_username">0123456789_-abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="settings_name_is_empty">Name must be not empty</string>
    <string name="settings_change_username_already_exists">This name already exists</string>
    <string name="settings_edit_text_bio">Bio</string>
    <!-- Register -->
    <string name="register_next">next</string>
    <string name="register_cd_image">registerImage</string>
    <string name="register_text_enter_code">Enter code</string>
    <string name="register_text_we_sent">We sent SMS with check code on your phone</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Your phone</string>
    <string name="register_enter_phone">Enter phone number</string>
    <string name="register_enter_phone_number_hint">+79111234567</string>
    <string name="register_authorization_successful">Authorization successful</string>
    <string name="register_authorization_error">Authorization error</string>
    <!-- Contacts -->
    <string name="contacts_title">Contacts</string>
    <!-- Main -->
    <string name="main_title">Gram</string>
    <!-- Single chat -->
    <string name="single_chat_sent_message">Sent message</string>
    <string name="single_chat_message">Message</string>
    <string name="single_chat_enter_a_message">Enter a message</string>
    <string name="single_chat_user_s_image">user\'s image send</string>
    <string name="single_chat_received_message">Received image</string>
    <string name="single_chat_attach_file">Attach file or image</string>
    <string name="single_chat_send_voice_message">Send voice message</string>
    <string name="single_chat_recording">Recording…</string>
    <string name="single_chat_voice_play">Play button</string>
    <string name="single_chat_voice_stop">Stop button</string>
    <string name="single_chat_file_play">Open file</string>
    <string name="single_chat_clear_chat">Clear chat</string>
    <string name="single_chat_delete_chat">Delete chat</string>
    <string name="single_chat_deleted">Chat has been deleted</string>
    <string name="single_chat_cleared">Chat has cleared</string>
    <!-- Bottom sheet for single chat -->
    <string name="bottom_sheet_attach_image">Attach image</string>
    <string name="bottom_sheet_attach_file">Attach file</string>
    <!-- Groups -->
    <string name="create_group">Create group</string>
    <string name="add_contacts_add_members">Add members</string>
    <string name="create_group_enter_name">Enter name</string>
    <string name="create_group_group_created">Group has been created</string>
    <plurals name="group_members">
        <item quantity="one">"%d member"</item>
        <item quantity="other">"%d members"</item>
    </plurals>
</resources>
